--- a/estilo/style.css
+++ b/estilo/style.css
@@ -264,16 +264,24 @@ footer{
 }
 
 
-/*#container{
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
-}*/
-
-/*Classe de controle js*/
-.hide{
+/*ID de Controle*/
+#container{
     display: none;
 }
+#container2{
+    display: none;
+}
+#container3{
+    display: none;
+}
+#container4{
+    display: none;
+}
+
+/*Classe de controle js*/
+/*.hide{
+    display: none;
+}*/
 
 @media screen and (max-width: 950px) {
 
