--- a/estilo/style.css
+++ b/estilo/style.css
@@ -125,6 +125,7 @@ main .perfil .funcionamento #funcao{
     padding-top: 5px;
     padding-bottom: 5px;
     gap: 10px;
+    display: none;
 }
 
 main .perfil .funcionamento #funcao h1{
@@ -143,6 +144,7 @@ main .perfil .funcionamento #funcao2{
     padding-top: 5px;
     padding-bottom: 5px;
     gap: 10px;
+    display: none;
 }
 
 main .perfil .funcionamento #funcao2 h1{
