--- a/estilo/style.css
+++ b/estilo/style.css
@@ -346,7 +346,7 @@ footer{
     main .itens .containers{
         margin: auto;
         width: 95%;
-        background-color: #ffffff;
+        background-color: #ebeae7;
         padding-top: 20px;
         padding-left: 1px;
         padding-right: 1px;
@@ -475,7 +475,7 @@ footer{
     main .itens .containers{
         margin: auto;
         width: 95%;
-        background-color: #ffffff;
+        background-color: #ebeae7;
         padding-top: 20px;
         padding-left: 1px;
         padding-right: 1px;
