--- a/estilo/style7.css
+++ b/estilo/style7.css
@@ -78,7 +78,7 @@ main{
 
 main .apresentacao{
     padding-top: 70px;
-    background-image: linear-gradient( to right, #d81b3b, #ff7a3d);
+    background-image: linear-gradient( to right, #a47148, #8b5e34);
     /*background-color: #d81b3b;*/
     width: 100%;
     padding-bottom: 20px;
