--- a/estilo/inicio.css
+++ b/estilo/inicio.css
@@ -118,7 +118,7 @@ main .apresentacao .chamativo a button{
     border-radius: 10px;
     padding: 10px;
     margin-top: 30px;
-    color: #4da735;
+    color: #1f1e1e;
     transition: 0.2s;
     cursor: pointer;
     background-color: #ffff;
@@ -144,23 +144,29 @@ main .corpo{
 main .corpo .modelos{
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 70px;
 }
 
 main .corpo .modelos h1{
     font-size: 2.5em;
     text-align: left;
     font-weight: 600;
+    color: #1f1e1e;
 } 
 main .corpo .modelos .corpo-img{
     width: 50%;
 }
 
 main .corpo .modelos img{
-    max-width: 100%;
+    max-width: 80%;
+    max-height: 80%;
 }
 
-main .corpo a button{
+main .corpo .modelos .modelos-btn a {
+    text-decoration: none;
+}
+
+main .corpo .modelos .modelos-btn a button{
     border: none;
     font-size: 1.7em;
     border-radius: 10px;
@@ -169,12 +175,91 @@ main .corpo a button{
     color: #ffffff;
     transition: 0.2s;
     cursor: pointer;
-    background-color: #141414;
+    background-color: #1f1e1e;
     box-shadow: 2px 2px 5px #23222471;
     margin-bottom: 100px;
+    display: block;
+}
+
+main .corpo a button{
+    border: none;
+    font-size: 1.7em;
+    border-radius: 10px;
+    padding: 15px 50px;
+    margin-top: 30px;
+    color: #ffffff;
+    transition: 0.2s;
+    cursor: pointer;
+    background-color: #1f1e1e;
+    box-shadow: 2px 2px 5px #23222471;
+    margin-bottom: 100px;
+    display: none;
 }
 
 main .corpo a button:hover{
+    transform: scale(1.15);
+}
+
+main .contratos{
+    padding-bottom: 100px;
+    background-color: #292929;
+}
+
+main .contratos h1{
+    color: #ffff;
+    font-size: 2em;
+    text-align: center;
+    padding-top: 20px;
+    margin-bottom: 50px;
+}
+
+main .contratos .cards{
+    display: flex;
+    width: 100%;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+main .contratos .cards .card{
+    background-color: #1f1e1e;
+    text-align: center;
+    width: 340px;
+    border-radius: 10px;
+    padding: 20px 10px;
+    box-shadow: 2px 2px 5px #23222471;
+
+}
+
+main .contratos .cards .card h1{
+    font-size: 2.5em;
+    color: #ffff;
+}
+
+main .contratos .cards .card .texto{
+    display: flex;
+    font-size: 1.1em;
+    gap: 5px;
+    padding: 10px;
+    color: #c9c8c8;
+    margin-top: 15px;
+}
+
+main .contratos .cards .card a button{
+    border: none;
+    font-size: 1.3em;
+    background-color: #4da735;
+    color: #ffff;
+    border-radius: 10px;
+    padding: 15px 15px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+main .contratos .cards .card a button:hover{
     transform: scale(1.15);
 }
 
