--- a/estilo/style.css
+++ b/estilo/style.css
@@ -41,7 +41,7 @@ header .menu-cabeca a{
     text-decoration: none;
     display: flex;
     padding: 10px;
-    transition: 0.2s;
+    transition: 0.1s;
     border-radius: 5px;
     font-size: 1.2em;
     gap: 0.5em;
@@ -101,6 +101,7 @@ main .perfil img{
 main .perfil h1{
     color: #ffff;
     font-size: 2em;
+    font-weight: 570;
 }
 
 main .perfil p{
@@ -195,6 +196,7 @@ main .itens .barra-item{
 
 main .itens .barra-item h1{
     color: #ffffff;
+    font-weight: 570;
 }
 
 main .itens .containers{
@@ -211,31 +213,33 @@ main .itens .containers .cards{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 20px;
+    gap: 5px;
     width: 85%;
     margin: auto;
+    align-items: center;
 }
 
 main .itens .containers .cards .card{
     cursor: pointer;
     text-align: center;
-    background-color: #ffffff;
+    background-color: #ffff;
     width: 48%;
-    height: 120px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 9px #2322249a;
-    transition: 0.2s;
+    transition: 0.1s;
     display: flex;
+    border-bottom: solid 3px;
+    border-color: #acabab;
 }
 main .itens .containers .cards .card:hover{
-    transform: scale(1.08);
+    transform: scale(1.05);
 }
 
 main .itens .containers .cards .card img{
     width: 150px;
     height: 100%;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
 
 main .itens .containers .cards .card .descricao{
@@ -244,12 +248,11 @@ main .itens .containers .cards .card .descricao{
 }
 
 main .itens .containers .cards .card h1{
-    color: #4d4d4d;
-    font-size: 1.1em;
-    margin-top: 6px;
+    color: #292828;
+    font-size: 1.2em;
     padding-left: 2px;
     padding-right: 2px;
-    font-weight: 500;
+    font-weight: 570;
 }
 
 main .itens .containers .cards .card p{
@@ -257,8 +260,8 @@ main .itens .containers .cards .card p{
     font-size: 0.9em;
     text-align: center;
     max-width: 98%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding-left: 6px;
     padding-right: 6px;
 
@@ -279,11 +282,11 @@ main .botao button{
     box-shadow: 2px 2px 5px #23222471;
     color: #ffff;
     cursor: pointer;
-    transition: 0.2s;
+    transition: 0.1s;
 }
 
 main .botao button:hover{
-    transform: scale(1.15);
+    transform: scale(1.05);
 }
 
 main .itens .barra-item .botao-menu{
@@ -292,7 +295,7 @@ main .itens .barra-item .botao-menu{
     color: #ffff;
     cursor: pointer;
     font-size: 1.5em;
-    transition: 0.2s;
+    transition: 0.1s;
 }
 
 main .itens .barra-item .botao-menu:hover{
@@ -362,17 +365,13 @@ footer{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 15px;
+        gap: 5px;
     }
     
     main .itens .containers .cards .card{
         cursor: pointer;
         text-align: center;
-        background-color: #ffffff;
         width: 95%;
-        height: 120px;
-        border-radius: 10px;
-        box-shadow: 5px 5px 9px #2322249a;
         transition: 0.2s;
         display: flex;
     }
@@ -491,18 +490,14 @@ footer{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 15px;
+        gap: 5px;
         width: 100%;
     }
     
     main .itens .containers .cards .card{
         cursor: pointer;
         text-align: center;
-        background-color: #ffffff;
         width: 95%;
-        height: 120px;
-        border-radius: 10px;
-        box-shadow: 5px 5px 9px #2322249a;
         transition: 0.2s;
         display: flex;
     }
