--- a/estilo/style3.css
+++ b/estilo/style3.css
@@ -135,6 +135,7 @@ main .perfil .funcionamento #funcao{
 main .perfil .funcionamento #funcao h1{
     color: #1e7916;
     font-size: 1em;
+    font-weight: 600;
 }
 
 main .perfil .funcionamento #funcao i{
@@ -154,6 +155,7 @@ main .perfil .funcionamento #funcao2{
 main .perfil .funcionamento #funcao2 h1{
     color: #791616;
     font-size: 1em;
+    font-weight: 600;
 }
 
 main .perfil .funcionamento #funcao2 i{
