--- a/estilo/modelos.css
+++ b/estilo/modelos.css
@@ -80,7 +80,7 @@ main{
 main .modelos{
     width: 100%;
     padding-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 400px;
     text-align: center;
 }
 
@@ -91,17 +91,18 @@ main .modelos h1{
 
 main .modelos .cards{
     padding-top: 70px;
-    width: 80%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
-    justify-content: center;
+    justify-content: space-between;
     margin: auto;
 }
 
 main .modelos .cards .card{
     text-align: center;
     transition: 0.1s;
+    width: 30%;
 }
 
 main .modelos .cards .card:hover{
@@ -111,6 +112,7 @@ main .modelos .cards .card:hover{
 main .modelos .cards .card h1{
     font-size: 1.3em;
     font-weight: 590;
+    margin-top: 10px;
 }
 
 main .modelos .cards .card a{
@@ -120,7 +122,7 @@ main .modelos .cards .card a{
 }
 
 main .modelos .cards .card img{
-    width: 250px;
+    width: 100%;
     border-radius: 10px;
     box-shadow: 4px 4px 6px #23222471;
 }
@@ -133,16 +135,21 @@ footer{
     color: #cfcfcf;
 }
 
-@media screen and (max-width: 800px){
-
+@media screen and (max-width: 1500px){
     main .modelos .cards{
         padding-top: 70px;
-        width: 95%;
-        gap: 20px;
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 25px;
+        margin: auto;
     }
-
-    main .modelos .cards .card img{
-        width: 200px;
+    
+    main .modelos .cards .card{
+        text-align: center;
+        transition: 0.1s;
+        width: 25%;
     }
 }
 
@@ -228,12 +235,19 @@ footer{
 
     main .modelos .cards{
         padding-top: 70px;
-        width: 95%;
-        gap: 15px;
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 25px;
+        margin: auto;
+    }
+    
+    main .modelos .cards .card{
+        text-align: center;
+        transition: 0.1s;
+        width: 45%;
     }
 
-    main .modelos .cards .card img{
-        width: 150px;
-    }
 }
 
